--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
 .*
-*.egg-info
 __pycache__
-config.json
+*.egg-info
+
 uploads
+config.json
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
+
+# OS or Editor folders
+.DS_Store
+.cache
+.project
+.settings
+.tmproj
+nbproject
+Thumbs.db
+
+# NPM packages folder.
+node_modules/
+
+# Brunch output folder.
+static/react
