--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "build": "brunch build --production"
   },
   "dependencies": {
+    "amazeui-react": "^1.2.3",
+    "material-ui": "^0.18.3",
     "react": "^15.4",
-    "react-dom": "^15.4"
+    "react-dom": "^15.4",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2",
