--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "amazeui-react": "^1.2.3",
+    "immutability-helper": "^2.2.2",
+    "jquery": "^3.2.1",
     "material-ui": "^0.18.3",
     "react": "^15.4",
     "react-dom": "^15.4",
