--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immutability-helper": "^2.2.2",
     "jquery": "^3.2.1",
     "material-ui": "^0.18.3",
+    "moment": "^2.18.1",
     "react": "^15.4",
     "react-dom": "^15.4",
     "react-tap-event-plugin": "^2.0.1"
